# kernel-density-estimation

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
examples/: kernel.rs  univariate.rs
src/: bandwidth.rs  float.rs  internal.rs  kernel.rs  lib.rs
src/bandwidth/: mod.rs  scott.rs  silverman.rs
src/kde/: mod.rs  multivariate.rs  univariate.rs
src/kernel/: cosine.rs  epanechnikov.rs  logistic.rs  mod.rs  normal.rs  quartic.rs  sigmoid.rs  silverman.rs  triangular.rs  tricube.rs  triweight.rs  uniform.rs
