[package]
name = "kernel-density-estimation"
version = "0.2.0"
edition = "2021"
authors = ["Seaton Ullberg <seatonullberg@gmail.com>"]
repository = "https://github.com/seatonullberg/kernel-density-estimation"
description = "Kernel density estimation in Rust."
license = "MIT"
keywords = [
    "probability-density",
    "non-parametric",
]
categories = [
    "algorithms",
    "mathematics",
]

[dependencies]
fastrand = "1.8"
nalgebra = "0.31"
num-traits = "0.2"

[dev-dependencies]
approx = "0.5"
criterion = "0.4"
plotly = "0.8"
rand = "0.8"
